src/objects/Scheme__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;https://cs1.salesforce.com/&quot; &amp; Case__r.AccountId,Case__r.Account.Name)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Schemes</relationshipLabel>
        <relationshipName>Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Schemes</relationshipLabel>
        <relationshipName>Schemes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Color_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Color Name</label>
        <referenceTo>Color__c</referenceTo>
        <relationshipLabel>Schemes</relationshipLabel>
        <relationshipName>Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color_Number__c</fullName>
        <label>Color Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color_Placement__c</fullName>
        <label>Color Placement</label>
        <picklist>
            <picklistValues>
                <fullName>Trim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Links__c</fullName>
        <label>Custom Links</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFB_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EFB Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFB_requests__c</fullName>
        <label># EFB Requests</label>
        <summaryFilterItems>
            <field>competitor_colors__c.EFB__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>competitor_colors__c.Scheme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <label>Elevation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Needed__c</fullName>
        <label>Formula Needed</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteriorExterior__c</fullName>
        <label>Interior/Exterior</label>
        <picklist>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Picture_Angle__c</fullName>
        <label>Picture Angle</label>
        <picklist>
            <picklistValues>
                <fullName>Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme__c</fullName>
        <label>Scheme</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sheen__c</fullName>
        <label>Sheen</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interior - Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior - Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior - PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior - Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior - Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior - PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WebEmail__c</fullName>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>of_color_formula_requests__c</fullName>
        <label># Of Color Formula Requests</label>
        <summaryForeignKey>competitor_colors__c.Scheme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_colors__c</fullName>
        <label># Of Colors</label>
        <summaryForeignKey>competitor_colors__c.Scheme__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_draw_downs__c</fullName>
        <label># Of Draw Downs</label>
        <summarizedField>competitor_colors__c.of_draw_downs__c</summarizedField>
        <summaryForeignKey>competitor_colors__c.Scheme__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Scheme</label>
    <nameField>
        <label>Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schemes</pluralLabel>
    <recordTypes>
        <fullName>Book_Board_Scheme</fullName>
        <active>true</active>
        <description>Color book or board scheme</description>
        <label>Book/Board Scheme</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Rendering_Scheme</fullName>
        <active>true</active>
        <description>Digital Rendering Scheme</description>
        <label>Digital Rendering Scheme</label>
    </recordTypes>
    <recordTypes>
        <fullName>Draw_Down_Scheme</fullName>
        <active>true</active>
        <description>Draw down scheme</description>
        <label>Draw Down Scheme</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>